update ci/cd again